Handle Server Errors

--- a/develop/force-app/main/default/classes/ContactController.cls
+++ b/develop/force-app/main/default/classes/ContactController.cls
@@ -1,9 +1,13 @@
 public with sharing class ContactController {
     @AuraEnabled(cacheable=true)
     public static List<Contact> getContacts(){
-        return [
-            SELECT FirstName, LastName, Email
-            FROM Contact
-        ];
+        try {
+            return [
+                SELECT FirstName, LastName, Email
+                FROM Contact
+            ];
+        } catch (Exception e) {
+            throw new AuraHandledException('ERROR');
+        }
     }
 }
